chrome/browser/icons.css
/* Based on: <https://github.com/not-holar/my_firefox_theme/tree/main/firefox/chrome> */

/* Icon overrides */
#back-button > .toolbarbutton-icon {
  list-style-image: url("../icons/back.svg") !important;
}

#bookmarks-menu-button > .toolbarbutton-icon {
  list-style-image: url("../icons/bookmarks.svg") !important;
}

#forward-button > .toolbarbutton-icon {
  list-style-image: url("../icons/forward.svg") !important;
}

#downloads-indicator-icon {
  list-style-image: url("../icons/downloads.svg") !important;
}

#history-panelmenu {
  list-style-image: url("../icons/history.svg") !important;
}

/*
#PanelUI-menu-button > .toolbarbutton-icon {
  list-style-image: url("../icons/menu.svg") !important;
}
*/

#nav-bar-overflow-button > .toolbarbutton-icon {
  list-style-image: url("../icons/overflow.svg") !important;
}

#reload-button > .toolbarbutton-icon {
  list-style-image: url("../icons/reload.svg") !important;
}

/* Based on: <https://github.com/datguypiko/Firefox-Mod-Blur/raw/master/EXTRA%20MODS/Icon%20and%20Button%20Mods/Menu%20icon%20change/menu_icon_change_to_firefox.css> */
/* Change main menu icon to firefox logo */
@media (prefers-color-scheme: dark) {
  #navigator-toolbox #PanelUI-menu-button {
    list-style-image: url(../icons/firefox.svg) !important;
  }

  :root[privatebrowsingmode="temporary"]
    #navigator-toolbox
    #PanelUI-menu-button {
    list-style-image: url(../icons/firefox-private.svg) !important;
  }
}

@media (prefers-color-scheme: light) {
  #navigator-toolbox #PanelUI-menu-button {
    list-style-image: url(../icons/firefox-light.svg) !important;
  }

  :root[privatebrowsingmode="temporary"]
    #navigator-toolbox
    #PanelUI-menu-button {
    list-style-image: url(../icons/firefox-private-light.svg) !important;
  }
}

#back-button,
#forward-button {
  padding-left: 0 !important;
  padding-right: 0 !important;
  padding: 0 !important;
}

#back-button > .toolbarbutton-icon,
#forward-button > .toolbarbutton-icon {
  padding: 6px !important;
  border: none !important;
  box-shadow: none !important;
}

:root:not([uidensity="compact"]) #nav-bar #back-button > .toolbarbutton-icon {
  --backbutton-background: transparent;
  background-origin: unset !important;
  background-clip: unset !important;
  border: unset !important;
  transition: unset !important;
  width: calc(2 * var(--toolbarbutton-inner-padding) + 16px) !important;
  padding: var(--toolbarbutton-inner-padding) !important;
  border-radius: var(--toolbarbutton-border-radius) !important;
}

/* Based on: <https://gist.githubusercontent.com/qaz69wsx/83a90423163b65a8344b2e60fc356a58/raw/d9fbd601430b834e9a658fd8bebbfee2cb914300/menu_icons.css> */
/* And: <https://github.com/bmFtZQ/edge-frfox/raw/main/chrome/icons/icons.css> */
/* Icons in menus */
.subviewbutton:not(.subviewbutton-iconic, [image], .all-tabs-close-button)
  > image {
  width: 16px;
  height: 16px;
  margin-inline-end: 8px !important;
  -moz-context-properties: fill;
  fill: currentColor;
}

/* Stop-Reload Animation */
#stop-reload-button[animate]
  > #reload-button[displaystop]
  + #stop-button
  > .toolbarbutton-animatable-box
  > .toolbarbutton-animatable-image {
  background-image: url("../icons/reload-to-stop.svg") !important;
}

/* Stop-Reload Animation */
#stop-reload-button[animate]
  > #reload-button
  > .toolbarbutton-animatable-box
  > .toolbarbutton-animatable-image {
  background-image: url("../icons/stop-to-reload.svg") !important;
}

#overflowMenu-customize-button > .toolbarbutton-icon {
  margin-inline-end: 0.5em !important;
}

#appMenu-zoom-controls,
#fxa-manage-account-button,
#PanelUI-remotetabs-view-managedevices {
  padding-inline-start: calc(
    var(--arrowpanel-menuitem-padding-inline) + 16px + 8px
  ) !important;
}

#appMenu-fxa-label2::before,
#fxa-manage-account-button::after {
  content: "";
  display: block;
  border-radius: 50%;
  background: var(--avatar-image-url) no-repeat center / contain;
  -moz-context-properties: fill;
  fill: currentColor;
}

#appMenu-fxa-label2::before {
  width: 16px;
  height: 16px;
  margin-inline-end: 8px;
}

#fxa-manage-account-button::after {
  width: 30px;
  height: 30px;
}

.syncNowBtn {
  visibility: visible !important;
  order: initial !important;
  margin-inline-end: 8px;
}

#appMenu-new-tab-button2 {
  list-style-image: url("chrome://browser/skin/new-tab.svg");
}

#appMenu-new-window-button2,
#appMenuRecentlyClosedWindows {
  list-style-image: url("chrome://browser/skin/window.svg");
}

#appMenu-new-private-window-button2 {
  list-style-image: url("chrome://browser/skin/privateBrowsing.svg");
}

#appMenu-bookmarks-button,
#panelMenuBookmarkThisPage[starred],
#appMenu-library-bookmarks-button {
  list-style-image: url("chrome://browser/skin/bookmark.svg");
}

#appMenu-history-button,
#appMenu-library-history-button {
  list-style-image: url("chrome://browser/skin/history.svg");
}

#appMenu-downloads-button,
#appMenu-library-downloads-button {
  list-style-image: url("chrome://browser/skin/downloads/downloads.svg");
}

#appMenu-passwords-button {
  list-style-image: url("chrome://browser/skin/login.svg");
}

#appMenu-extensions-themes-button {
  list-style-image: url("chrome://mozapps/skin/extensions/extension.svg");
}

#appMenu-print-button2 {
  list-style-image: url("chrome://global/skin/icons/print.svg");
}

#appMenu-save-file-button2 {
  list-style-image: url("chrome://browser/skin/save.svg");
}

#appMenu-find-button2,
#panelMenu_searchBookmarks,
#appMenuSearchHistory,
#allTabsMenu-searchTabs {
  list-style-image: url("chrome://global/skin/icons/search-glass.svg");
}

#appMenu-translate-button {
  list-style-image: url("chrome://browser/skin/translations.svg");
}

#appMenu-settings-button,
#PanelUI-fxa-menu-sync-prefs-button,
#protections-popup-settings-button,
#protections-popup-trackersView-settings-button {
  list-style-image: url("chrome://global/skin/icons/settings.svg");
}
/* ... */

